Updated...a few more are 100% passing now.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3804 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -361,23 +361,21 @@ test/externals/rubinius/spec/core/integer_spec.rb
 test/externals/rubinius/spec/core/io_spec.rb
 test/externals/rubinius/spec/core/nil_spec.rb
 test/externals/rubinius/spec/core/objectspace_spec.rb
+test/externals/rubinius/spec/core/proc_spec.rb
 test/externals/rubinius/spec/core/range_spec.rb
 test/externals/rubinius/spec/core/symbol_spec.rb
 test/externals/rubinius/spec/core/true_spec.rb
 test/externals/rubinius/spec/language/assignment_spec.rb
 test/externals/rubinius/spec/language/class_spec.rb
 test/externals/rubinius/spec/language/case_spec.rb
+test/externals/rubinius/spec/language/splat_spec.rb
 test/externals/rubinius/spec/language/variables_spec.rb
 test/externals/rubinius/spec/language/expressions/for_spec.rb
 test/externals/rubinius/spec/language/expressions/if_spec.rb
 test/externals/rubinius/spec/language/expressions/unless_spec.rb
 test/externals/rubinius/spec/language/keywords/break_spec.rb
 test/externals/rubinius/spec/language/keywords/defined_spec.rb
-test/externals/rubinius/spec/language/literals/array_spec.rb
-test/externals/rubinius/spec/language/literals/execution_spec.rb
-test/externals/rubinius/spec/language/literals/hash_spec.rb
-test/externals/rubinius/spec/language/literals/numbers_spec.rb
-test/externals/rubinius/spec/language/literals/symbol_spec.rb
+test/externals/rubinius/spec/language/literals
 test/externals/rubinius/spec/library
 test/externals/rubinius/spec/parser"/></antcall>
   </target>
@@ -390,23 +388,21 @@ test/externals/rubinius/spec/core/integer_spec.rb
 test/externals/rubinius/spec/core/io_spec.rb
 test/externals/rubinius/spec/core/nil_spec.rb
 test/externals/rubinius/spec/core/objectspace_spec.rb
+test/externals/rubinius/spec/core/proc_spec.rb
 test/externals/rubinius/spec/core/range_spec.rb
 test/externals/rubinius/spec/core/symbol_spec.rb
 test/externals/rubinius/spec/core/true_spec.rb
 test/externals/rubinius/spec/language/assignment_spec.rb
 test/externals/rubinius/spec/language/class_spec.rb
 test/externals/rubinius/spec/language/case_spec.rb
+test/externals/rubinius/spec/language/splat_spec.rb
 test/externals/rubinius/spec/language/variables_spec.rb
 test/externals/rubinius/spec/language/expressions/for_spec.rb
 test/externals/rubinius/spec/language/expressions/if_spec.rb
 test/externals/rubinius/spec/language/expressions/unless_spec.rb
 test/externals/rubinius/spec/language/keywords/break_spec.rb
 test/externals/rubinius/spec/language/keywords/defined_spec.rb
-test/externals/rubinius/spec/language/literals/array_spec.rb
-test/externals/rubinius/spec/language/literals/execution_spec.rb
-test/externals/rubinius/spec/language/literals/hash_spec.rb
-test/externals/rubinius/spec/language/literals/numbers_spec.rb
-test/externals/rubinius/spec/language/literals/symbol_spec.rb
+test/externals/rubinius/spec/language/literals
 test/externals/rubinius/spec/library
 test/externals/rubinius/spec/parser"/></antcall>
   </target>
