--- a/build.xml
+++ b/build.xml
@@ -233,7 +233,7 @@
           </antcall>
     </target>
 
-  <target name="jar" description="Create the jruby.jar file">
+  <target name="jar" depends="init" description="Create the jruby.jar file">
     <uptodate targetfile="${lib.dir}/jruby.jar" property="jar-up-to-date">
         <srcfiles dir="${src.dir}" includes="**/*.java"/>
     </uptodate>
