JRUBY-1095: fix gem install for distros to use --env-shebang - also update poms to 1.0
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3833 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -273,6 +273,7 @@
       <arg value="maybe_install_gems"/>
       <arg value="rspec"/>
       <arg value="rake"/>
+      <arg value="--env-shebang"/>
     </java>
   </target>
   
