--- a/maven/jruby/pom.xml
+++ b/maven/jruby/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>org.jruby</groupId>
     <artifactId>shared</artifactId>
-    <version>1.0RC3</version>
+    <version>1.0</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jruby</groupId>
   <artifactId>jruby</artifactId>
   <packaging>jar</packaging>
-  <version>1.0RC3</version>
+  <version>1.0</version>
   <name>JRuby</name>
 
   <dependencies>
