JRUBY-1162: dump_invocations in the maven build
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3909 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -127,6 +127,23 @@
             </goals>
           </execution>
           <execution>
+            <id>generate-method-classes</id>
+            <phase>process-classes</phase>
+            <goals><goal>run</goal></goals>
+            <configuration>
+              <tasks>
+                <touch file="${project.build.directory}/__empty.rb"/>
+                <java classname="org.jruby.Main" fork="true">
+                  <classpath refid="maven.compile.classpath"/>
+                  <sysproperty key="jruby.dump_invocations" value="${project.build.outputDirectory}"/>
+                  <arg value="-rjava"/>
+                  <arg value="${project.build.directory}/__empty.rb"/>
+                </java>
+                <delete file="${project.build.directory}/__empty.rb" quiet="true"/>
+              </tasks>
+            </configuration>
+          </execution>
+          <execution>
             <id>jarjar</id>
             <phase>package</phase>
             <configuration>
