Fix for JRUBY-1073, allow Rubinius next_spec to run correctly
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3947 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -374,6 +374,7 @@ test/externals/rubinius/spec/language/expressions/unless_spec.rb
 test/externals/rubinius/spec/language/expressions/while_spec.rb
 test/externals/rubinius/spec/language/keywords/break_spec.rb
 test/externals/rubinius/spec/language/keywords/defined_spec.rb
+test/externals/rubinius/spec/language/keywords/next_spec.rb
 test/externals/rubinius/spec/language/keywords/redo_spec.rb
 test/externals/rubinius/spec/language/literals
 test/externals/rubinius/spec/library
@@ -403,6 +404,7 @@ test/externals/rubinius/spec/language/expressions/unless_spec.rb
 test/externals/rubinius/spec/language/expressions/while_spec.rb
 test/externals/rubinius/spec/language/keywords/break_spec.rb
 test/externals/rubinius/spec/language/keywords/defined_spec.rb
+test/externals/rubinius/spec/language/keywords/next_spec.rb
 test/externals/rubinius/spec/language/keywords/redo_spec.rb
 test/externals/rubinius/spec/language/literals
 test/externals/rubinius/spec/library
