Fix for JRUBY-1056, make Rubinius enumerable_spec run.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3951 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -353,6 +353,7 @@
   
   <target name="test-spec-compiled" depends="install-gems">
     <antcall target="run-spec-compiled"><param name="SPEC" value="
+test/externals/rubinius/spec/core/enumerable_spec.rb
 test/externals/rubinius/spec/core/false_spec.rb
 test/externals/rubinius/spec/core/hash_spec.rb
 test/externals/rubinius/spec/core/integer_spec.rb
@@ -386,6 +387,7 @@ test/externals/rubinius/spec/parser"/></antcall>
   
   <target name="test-spec-interpreted" depends="install-gems">
     <antcall target="run-spec"><param name="SPEC" value="
+test/externals/rubinius/spec/core/enumerable_spec.rb
 test/externals/rubinius/spec/core/false_spec.rb
 test/externals/rubinius/spec/core/hash_spec.rb
 test/externals/rubinius/spec/core/integer_spec.rb
