JRUBY-877: Sources not available during command-line debugging
Parser interface juggling


git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4033 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="lib/jline-0.9.91.jar"/>
 	<classpathentry kind="lib" path="lib/backport-util-concurrent.jar"/>
 	<classpathentry kind="lib" path="lib/junit.jar"/>
+	<classpathentry kind="lib" path="lib/asm-util-2.2.3.jar"/>
 	<classpathentry kind="output" path="build/classes/jruby"/>
 </classpath>
