--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -39,6 +39,12 @@
       <version>2.2.3</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm-util</artifactId>
+      <version>2.2.3</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -63,6 +69,11 @@
                 <artifactItem>
                   <groupId>asm</groupId>
                   <artifactId>asm-commons</artifactId>
+                  <version>2.2.3</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>asm</groupId>
+                  <artifactId>asm-util</artifactId>
                   <version>2.2.3</version>
                 </artifactItem>
                 <artifactItem>
