--- a/maven/jruby/pom.xml
+++ b/maven/jruby/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>asm-commons</artifactId>
       <version>2.2.3</version>
     </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm-util</artifactId>
+      <version>2.2.3</version>
+    </dependency>
   </dependencies>
 
   <build>
