--- a/.classpath
+++ b/.classpath
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry excluding="**/CVS/*" kind="src" output="build/classes/test" path="test"/>
+	<classpathentry excluding="**/CVS/*" kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/bsf.jar"/>
-	<classpathentry kind="lib" path="lib/asm-commons-2.2.3.jar"/>
-	<classpathentry kind="lib" path="lib/asm-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/jline-0.9.91.jar"/>
 	<classpathentry kind="lib" path="lib/backport-util-concurrent.jar"/>
 	<classpathentry kind="lib" path="lib/junit.jar"/>
-	<classpathentry kind="lib" path="lib/asm-util-2.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/asm-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/asm-commons-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/asm-util-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/jruby.jar"/>
 	<classpathentry kind="output" path="build/classes/jruby"/>
 </classpath>
