--- a/maven/jruby-jdk14/pom.xml
+++ b/maven/jruby-jdk14/pom.xml
@@ -20,27 +20,25 @@
       <artifactId>jline</artifactId>
       <version>0.9.91</version>
     </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm-commons</artifactId>
+      <version>3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm-util</artifactId>
+      <version>3.0</version>
+    </dependency>
   </dependencies>
 
   <build>
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-webdav</artifactId>
-        <version>1.0-beta-1</version>
-      </extension>
-    </extensions>
-    <sourceDirectory>${project.basedir}/../../src</sourceDirectory> 
-    <testSourceDirectory>${project.basedir}/../../test</testSourceDirectory> 
-    <resources> 
-      <resource> 
-        <directory>${project.basedir}/../../src</directory> 
-        <includes> 
-          <include>**/*.rb</include> 
-          <include>**/*.properties</include> 
-        </includes> 
-      </resource> 
-    </resources> 
+    <sourceDirectory>${basedir}/../../src</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -55,49 +53,80 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>serialize</id>
-            <phase>process-classes</phase>
-            <configuration>
-              <tasks>
-                <taskdef name="jruby-serialize" classname="org.jruby.util.ant.JRubySerialize">
-                  <classpath path="${project.build.outputDirectory}"/>
-                </taskdef>
-                <jruby-serialize destdir="${project.build.outputDirectory}">
-                  <fileset dir="${project.build.sourceDirectory}">
-                    <include name="**/*.rb"/>
-                  </fileset>
-                </jruby-serialize>
-              </tasks>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <includes>
+            <!-- <include>org/jruby/test/MainTestSuite.java</include> -->
+            <!-- <include>org/jruby/test/ScriptTestSuite.java</include>  -->
+            <!-- <include>org/jruby/test/TestUnitTestSuite.java</include> -->
+          </includes>
+          <excludes>
+            <exclude>**/*.java</exclude>
+          </excludes>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>retrotranslator-maven-plugin</artifactId>
         <executions>
           <execution>
-            <phase>process-classes</phase>
+            <phase>package</phase>
             <goals>
-              <goal>translate</goal>
+              <goal>translate-project</goal>
             </goals>
             <configuration>
-              <includes>
-                <include>
-                  <directory>${project.build.outputDirectory}</directory>
-                </include>
-              </includes>
+              <attach>false</attach>
+              <embed>org.jruby.retrotranslator</embed>
             </configuration>
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>generate-method-classes</id>
+            <phase>process-classes</phase>
+            <goals><goal>run</goal></goals>
+            <configuration>
+              <tasks>
+                <touch file="${project.build.directory}/__empty.rb"/>
+                <java classname="org.jruby.Main" fork="true">
+                  <classpath refid="maven.compile.classpath"/>
+                  <sysproperty key="jruby.dump_invocations" value="${project.build.outputDirectory}"/>
+                  <arg value="-rjava"/>
+                  <arg value="${project.build.directory}/__empty.rb"/>
+                </java>
+                <delete file="${project.build.directory}/__empty.rb" quiet="true"/>
+              </tasks>
+            </configuration>
+          </execution>
+          <execution>
+            <id>move-translated-jar</id>
+            <phase>package</phase>
+            <goals><goal>run</goal></goals>
+            <configuration>
+              <tasks>
+                <move file="${project.build.directory}/${project.build.finalName}-jdk14.jar"
+                      tofile="${project.build.directory}/${project.build.finalName}.jar" />
+              </tasks>
+            </configuration>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>ant</groupId>
+            <artifactId>ant-junit</artifactId>
+            <version>1.6.5</version>
+          </dependency>
+          <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+          </dependency>
+        </dependencies>
+      </plugin>
     </plugins>
   </build>
 </project>
-
