--- a/maven/jruby/pom.xml
+++ b/maven/jruby/pom.xml
@@ -94,6 +94,7 @@
                   <formatter type="xml"/>
                   <formatter type="brief" usefile="false"/>
                   <sysproperty key="java.awt.headless" value="true"/>
+                  <sysproperty key="jruby.jit.enabled" value="false"/>
                   <sysproperty key="basedir" value="${basedir}"/>
                   <sysproperty key="jruby.home" value="${basedir}/../.."/>
                   <sysproperty key="jruby.base" value="${basedir}/../.."/>
