--- a/build.xml
+++ b/build.xml
@@ -294,6 +294,8 @@
       <arg value="--format"/>
       <arg value="e"/>
       <arg line="${SPEC}"/>
+      
+      <jvmarg value="-ea"/>
     </java>
   </target>
   
@@ -309,6 +311,8 @@
       <arg value="--format"/>
       <arg value="e"/>
       <arg line="${SPEC}"/>
+      
+      <jvmarg value="-ea"/>
     </java>
   </target>
 
@@ -447,6 +451,8 @@ test/externals/rubinius/spec/parser"/></antcall>
       <sysproperty key="jruby.jit.enabled" value="false"/>
       <sysproperty key="emma.coverage.out.file" value="${test.results.dir}/coverage.emma" />
       <sysproperty key="emma.coverage.out.merge" value="true" />
+      
+      <jvmarg value="-ea"/>
 
       <formatter type="xml"/>
       <formatter type="brief" usefile="false"/>
@@ -479,6 +485,8 @@ test/externals/rubinius/spec/parser"/></antcall>
       <sysproperty key="jruby.jit.threshold" value="0"/>
       <sysproperty key="emma.coverage.out.file" value="${test.results.dir}/coverage.emma" />
       <sysproperty key="emma.coverage.out.merge" value="true" />
+      
+      <jvmarg value="-ea"/>
 
       <formatter type="xml"/>
       <formatter type="brief" usefile="false"/>
