Adding JNA and a JNA-based POSIX library. I can't resist...it works so seamlessly.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4259 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
   <property file="default.build.properties"/>
 
   <path id="build.classpath">
-    <fileset dir="${lib.dir}" includes="*.jar" excludes="jruby.jar"/>
+    <fileset dir="${lib.dir}" includes="*.jar" excludes="jruby*.jar"/>
   </path>
 
   <!-- directory that contains emma.jar and emma_ant.jar: -->
