JRUBY-1311: temporary fix for maven build with JNA
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4266 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -45,6 +45,14 @@
       <version>3.0</version>
       <scope>provided</scope>
     </dependency>
+    <!-- TODO: replace this JNA system dependency with a real one -->
+    <dependency>
+      <groupId>com.sun.jna</groupId>
+      <artifactId>jna</artifactId>
+      <version>incomplete</version>
+      <systemPath>${project.basedir}/../../lib/jna.jar</systemPath>
+      <scope>system</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -108,6 +116,9 @@
             <phase>process-resources</phase>
             <configuration>
               <tasks>
+                <!-- TODO: remove this manual unzipping of JNA -->
+                <unzip src="${project.basedir}/../../lib/jna.jar"
+                  dest="${project.build.outputDirectory}" />
                 <delete file="${project.build.outputDirectory}/META-INF/MANIFEST.MF"/>
                 <mkdir dir="${project.build.outputDirectory}/META-INF/jruby.home"/>
                 <copy todir="${project.build.outputDirectory}/META-INF/jruby.home">
