--- a/maven/jruby/pom.xml
+++ b/maven/jruby/pom.xml
@@ -35,6 +35,14 @@
       <artifactId>asm-util</artifactId>
       <version>3.0</version>
     </dependency>
+    <!-- TODO: replace this JNA system dependency with a real one -->
+    <dependency>
+      <groupId>com.sun.jna</groupId>
+      <artifactId>jna</artifactId>
+      <version>incomplete</version>
+      <systemPath>${project.basedir}/../../lib/jna.jar</systemPath>
+      <scope>system</scope>
+    </dependency>
   </dependencies>
 
   <build>
