Make launch memory size configurable for tasks that launch JRuby (e.g., gem install) and default to 384M
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4394 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -272,7 +272,7 @@
 
   <target name="install-gems">
     <property name="jruby.home" value="${basedir}"/>
-    <java classname="org.jruby.Main" fork="true" maxmemory="256M" failonerror="true">
+    <java classname="org.jruby.Main" fork="true" maxmemory="${jruby.launch.memory}" failonerror="true">
       <classpath refid="build.classpath"/>
       <classpath path="${jruby.classes.dir}"/>
       <sysproperty key="jruby.home" value="${jruby.home}"/>
@@ -286,7 +286,7 @@
   
   <target name="run-spec">
     <echo message="Running spec(s) located at: ${SPEC}"/>
-    <java classname="org.jruby.Main" fork="true" maxmemory="256M" failonerror="true">
+    <java classname="org.jruby.Main" fork="true" maxmemory="${jruby.launch.memory}" failonerror="true">
       <classpath refid="build.classpath"/>
       <classpath path="${jruby.classes.dir}"/>
       <sysproperty key="jruby.home" value="${basedir}"/>
@@ -663,7 +663,7 @@ test/externals/rubinius/spec/parser"/></antcall>
         <classpath> <pathelement location="... specify ..."/> </classpath>
     </nbprofiledirect>
 
-    <java classname="org.jruby.Main" maxmemory="256M" fork="true">
+    <java classname="org.jruby.Main" maxmemory="${jruby.launch.memory}" fork="true">
       <classpath>
         <pathelement location="${jruby.instrumented.classes.dir}" />
         <path refid="build.classpath"/>
@@ -690,7 +690,7 @@ test/externals/rubinius/spec/parser"/></antcall>
         <classpath> <pathelement location="... specify ..."/> </classpath>
     </nbprofiledirect>
 
-    <java classname="org.jruby.Main" maxmemory="256M" fork="true">
+    <java classname="org.jruby.Main" maxmemory="${jruby.launch.memory}" fork="true">
       <classpath>
         <pathelement location="${jruby.instrumented.classes.dir}" />
         <path refid="build.classpath"/>
