--- a/default.build.properties
+++ b/default.build.properties
@@ -16,3 +16,4 @@ test.results.dir=${build.dir}/test-results
 html.test.results.dir=${test.results.dir}/html
 html.test.coverage.results.dir=${test.results.dir}/html-coverage
 javac.version=1.5
+jruby.launch.memory=384M
