Add missing ASM jars to jar-complete
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4417 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -175,6 +175,8 @@
         <zipfileset src="${lib.dir}/asm-3.0.jar"/>
         <zipfileset src="${lib.dir}/asm-commons-3.0.jar"/>
         <zipfileset src="${lib.dir}/asm-util-3.0.jar"/>
+        <zipfileset src="${lib.dir}/asm-analysis-3.0.jar"/>
+        <zipfileset src="${lib.dir}/asm-tree-3.0.jar"/>
         <zipfileset src="${lib.dir}/jline-0.9.91.jar"/>
       	<zipfileset src="${lib.dir}/backport-util-concurrent.jar"/>
         <zipfileset src="${lib.dir}/jna.jar"/>
